<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_tab"
        android:icon="@drawable/ic_home_24px"
        android:iconTint="@color/dark_blue"
        android:title="@string/home_tab_title" />

    <item
        android:id="@+id/create_tab"
        android:icon="@drawable/ic_create_kit_icon_24px"
        android:iconTint="@color/dark_blue"
        android:title="@string/design" />

    <item
        android:id="@+id/fav_tab"
        android:icon="@drawable/ic_bookmark_24px"
        android:iconTint="@color/dark_blue"
        android:title="@string/saved" />

    <item
        android:id="@+id/profile_tab"
        android:icon="@drawable/ic_branded_profile_tab_icon"
        android:iconTint="@color/dark_blue"
        android:title="@string/profile_tab_title" />
</menu>