<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rLayout"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_kit.CreateFragment">

    <RelativeLayout
        android:id="@+id/kit_creator_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="5dp"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/ic_save_24px"
            android:tint="@color/dark_white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/parentImageRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kit_creator_bar">

        <ImageView
            android:id="@+id/photoEditImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/host_card_strips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:cardBackgroundColor="@color/light_black"
        app:layout_constraintBottom_toTopOf="@+id/main_tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/host_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:cardBackgroundColor="@color/light_black"
        app:layout_constraintBottom_toTopOf="@+id/main_tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIconTint="@color/dark_white"
        app:tabIndicator="@null"
        app:tabPaddingEnd="0dp"
        app:tabPaddingStart="0dp"
        app:tabRippleColor="#2CFFFFFF"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:tabTextColor="@color/dark_white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/guidelines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_visibility_off_24px"
            android:text="@string/tab_item_guidelines" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/add_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_add_photo_alternate_24px"
            android:text="@string/tab_item_add" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/strips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_texture_24px"
            android:text="@string/tab_item_strips" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_palette_24px"
            android:text="@string/tab_item_color" />

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>